# fleetbit

./: .gitignore  Cargo.toml  Dockerfile.api  Dockerfile.frontend  Dockerfile.ingestor  Dockerfile.migrate  LICENSE  README.md  docker-compose.yml
.sqlx/: query-13a2c21db054f844ef472203dd8ebd59e27cef61ce6f387c56fbf97a70fdbbaa.json  query-923efd5a50fbc08559e12a2f35f5da9b21c7537213d7401c1575493278fb1f53.json  query-d966bd7acd64733db083e5f7ccc03db765da726b50382578134fe0efe54bacdc.json
crates/api/: Cargo.toml
crates/api/src/: error.rs  main.rs  state.rs
crates/api/src/auth/: mod.rs
crates/api/src/routes/: auth.rs  mod.rs  vessels.rs  ws.rs
crates/ingestor/: Cargo.toml
crates/ingestor/src/: config.rs  main.rs  parser.rs  station.rs
crates/shared/: Cargo.toml
crates/shared/src/db/: pool.rs
crates/shared/src/db/queries/: mod.rs  vessels.rs
crates/shared/src/models/: fleet.rs  mod.rs  user.rs  vessel.rs  zone.rs
frontend/: nginx.conf  package-lock.json
frontend/src/: App.tsx  AppShell.tsx  AuthContext.tsx  ThemeContext.tsx  api.ts  index.css  main.tsx  types.ts
frontend/src/components/: ClusterMarker.tsx  HeatmapLayer.tsx  LiveMap.tsx  Sidebar.tsx  StatsWidget.tsx  Toast.tsx  VesselMarker.tsx  VesselPanel.tsx
frontend/src/pages/: GuestMapPage.tsx  LandingPage.tsx  LoginPage.tsx  RegisterPage.tsx
migrations/: 001_initial.sql  002_zones.sql  003_users.sql  004_auth_roles.sql
