[workspace]
members = [
    "crates/ingestor",
    "crates/api",
    "crates/shared",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio",
    "chrono",
    "uuid",
    "macros",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ais = "0.12"
dotenvy = "0.15"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
argon2 = "0.5"
jsonwebtoken = "9"
rand = "0.8"
