[package]
name = "ingestor"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../../crates/shared" }
tokio = { workspace = true }
ais = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
